# simple-pastebin

./: Cargo.toml  Dockerfile  README.md  cli.py  cli.sh  config.toml  gendockerfile.sh  index.html  script.js  separate.sh  todo.md
assets/: buttons.css  index.html  paste.html  paste.js  script.js  styles.css  toggle.css
docs/: cli.md  configuring.md  docker.md  maintenance.md
src/: config.rs  database.rs  helpers.rs  main.rs
