[package]
name = "simple_pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = "*"
chrono = "*"
toml = "*"
serde = "*"
config = "*"
tower-http =  { version = "*", features = ["fs"] }
clap = { version = "*", features = ["derive"] }
log = "*"
env_logger = "*"
rand = "*"
